# tauri-git-explorer

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/.storybook/: main.ts  preview.tsx
apps/desktop/.storybook/mocks/: tauri-core.ts  tauri-dialog.ts  tauri-event.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/adapters/inbound/: tauri_commands.rs
apps/desktop/src-tauri/src/adapters/outbound/: fs_repository_watcher.rs  git_cli.rs  json_repository_store.rs  mod.rs
apps/desktop/src-tauri/src/application/: branch_service.rs  history_service.rs  mod.rs  ports.rs  repository_service.rs  repository_watch_service.rs  worktree_service.rs
apps/desktop/src-tauri/src/domain/: branch.rs  commit.rs  mod.rs  repository.rs  repository_event.rs  worktree.rs
apps/desktop/src/app/providers/: query.tsx  router.tsx
apps/desktop/src/app/styles/: index.css
apps/desktop/src/entities/repository/: api.ts  index.ts
apps/desktop/src/pages/repository/: index.ts
apps/desktop/src/shared/storybook/: sample-data.ts  storybook-providers.tsx
apps/desktop/src/stories/: atoms.stories.tsx  molecules.stories.tsx  organisms.stories.tsx  pages.stories.tsx
docs/: changes-panel-refactoring.md  client-state-with-zustand.md  dynamic-dev-port.md  git-history-tree-design.md  graph-layout-testing.md  improvement-roadmap.md
scripts/: tauri-dev.mjs
(+6 files in other folders)
